[package]
name = "gladiators-player-service"
version = "0.1.0"
authors = ["Sebastian Voigt"]
edition = "2018"

[dependencies]
tide = "0.15.0"
async-std = { version = "1.7.0", features = ["attributes"] }

serde = "1.0.118"

sqlx = { version = "0.4.0", features = [ "runtime-async-std-native-tls", "postgres"] }
