[package]
name = "gladiators-player-service"
version = "0.1.0"
authors = ["Sebastian Voigt"]
edition = "2018"

[dependencies]
actix-web = "3"

serde = "1.0.118"
serde_json = "1.0"

futures = "0.3"
sqlx = { version = "0.4.0", features = [ "runtime-actix-native-tls", "postgres"] }

regex = "1.4.2"
lazy_static = "1.4.0"

tracing = "0.1.22"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.15"
tracing-actix-web = "0.2"
